devops/kubernetes/exemple/global/gateway-api/haproxy/test/coffee-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: coffee-gateway
  namespace: test
spec:
  gatewayClassName: haproxy-ingress-gatewayclass
  listeners:
    - allowedRoutes:
        kinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute
        namespaces:
          from: All
      name: listener1
      port: 8000
      protocol: TCP
