devops/kubernetes/exemple/global/gateway-api/haproxy/test/example-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: test
  labels:
    run: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      run: app
  template:
    metadata:
      labels:
        run: app
    spec:
      containers:
      - name: app
        image: jmalloc/echo-server
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  namespace: test
  name: example-service
spec:
  selector:
    run: app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
